name:                           argon
version:                        0.1.0.0
license:                        BSD3
license-file:                   LICENSE
author:                         Frano Perleta
maintainer:                     frane.perleta@gmail.com
category:                       System
build-type:                     Simple
cabal-version:                  >=1.8

library
  exposed-modules:              System.Console.Argon
  build-depends:                base ==4.7.*,
                                mtl >=2.1,
                                containers >=0.5
  hs-source-dirs:               src
